--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 3rem;
+  /* gap: 1rem; */
+  /* padding: 3rem; */
+  padding-bottom: 1rem;
 }
