--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -7,3 +7,21 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
+
+@media (max-width: 1200px) {
+  .imagesList {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .imagesList {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .imagesList {
+    grid-template-columns: 1fr;
+  }
+}
